# B+ Tree Test Cases

noinst_PROGRAMS = testsuite

TESTS = testsuite

testsuite_SOURCES = tpunit.cc tpunit.h

testsuite_SOURCES += InstantiationTest.cc
testsuite_SOURCES += SimpleTest.cc
testsuite_SOURCES += BoundTest.cc
testsuite_SOURCES += IteratorTest.cc

AM_CXXFLAGS = -W -Wall -fpermissive  -Wold-style-cast -Wshadow -I$(top_srcdir)/include
